--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@ body {
 .container {
   width: 60%;
   max-width: calc(55em * 0.8);
-  border: 1px solid black;
-  border-radius: 0.25em;
+  border: 1px solid rgb(204, 204, 204);
+  border-radius: 0.5em;
   margin: 2em auto;
   padding: 1em;
   display: flex;
@@ -26,6 +26,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.header h2 {
+  font-size: 2em;
 }
 
 .header button {
@@ -55,5 +59,47 @@ body {
 }
 
 .task.reminder {
-  border-left: 3px solid green;
+  border-left: 5px solid green;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+.form-control {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25em;
+}
+
+form label {
+  font-weight: 600;
+}
+
+form input[type="text"] {
+  padding: 0.5em;
+}
+
+.checkbox-section {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+}
+
+.submit-btn {
+  background-color: black;
+  color: white;
+  padding: 0.8em 2em;
+  border-radius: 0.5em;
+  border: none;
+  cursor: pointer;
+}
+
+.error-message {
+  color: red;
+  display: flex;
+  align-items: flex-start;
+  gap: 0.3em;
 }
